syntax = "proto3";
option go_package = "github.com/0x00b/gobbq;proto";
package proto;

//protoc --go_out=paths=source_relative:. bbq.proto

enum ContentType {
	proto = 0;
}

enum CompressType {
	gzip = 0;
}

enum CallType {
	entity = 0;
	service = 1;
}


// 请求协议头
message Header {
	// 协议版本
	// 具体值与Version对应
	uint32  Version = 1;  
	// 具体值与CallType对应
 	// 请求唯一id
	string RequestId = 2; 
	// 请求的超时时间，单位ms
	uint32 Timeout = 3;
	// call sverice or call entity
	CallType CallType = 4; 
	// 调用的原EntityID
	string SrcEntityID= 5;
	// 调用的目的EntityID
	string DstEntityID = 6;
	// 调用服务的接口名
	// 规范格式: /package.Service名称/接口名
	string Method = 7;
	// 请求数据的序列化类型
	// 比如: proto/jce/json, 默认proto
	// 具体值与ContentEncodeType对应
	ContentType ContentType = 8;
	// 请求数据使用的压缩方式
	// 比如: gzip/snappy/..., 默认不使用
	// 具体值与CompressType对应
	CompressType CompressType = 9;
	// body len, 为了效率，body先不解开，需要时再解开
	uint32 BodyLen = 10;
	// 是否检查包是否正确
	uint32  CheckFlags = 11;
	// 附加信息
	map <string, bytes> TransInfo = 12;
}